# server/api/Dtos/CreatePlayerDto.cs
@@ -1,3 +1,3 @@
 ﻿namespace api.Dtos;
 
-public record CreatePlayerDto(string Email, string Name);
+public record CreatePlayerDto(string Email, string Name, string Passwordhash, string Salt, DateTime Createdat,  string Role);
