# server/api/Services/IAuthService.cs
@@ -1,0 +1,12 @@
+﻿using api.Models;
+using api.Models.Requests;
+
+namespace api.Services;
+
+public interface IAuthService
+{
+    Task<JwtClaims> VerifyAndDecodeToken(string? token);
+
+    Task<JwtResponse> Login(LoginRequestDto dto);
+    Task<JwtResponse> Register(RegisterRequestDto dto);
+}
