# server/api/Services/PlayerService.cs
@@ -1,5 +1,6 @@
 ﻿using api.Dtos;
 using dataccess;
+using Microsoft.AspNetCore.Mvc;
 using Player = dataccess.Entities.Player;
 
 namespace api.Services;
@@ -12,7 +13,11 @@ public class PlayerService(MyDbContext dbContext) :  IPlayerService
         {
             Id = Guid.NewGuid().ToString(),
             Email = dto.Email,
-            Name = dto.Name
+            Name = dto.Name,
+            Passwordhash = dto.Passwordhash,
+            Salt = dto.Salt,
+            Createdat = DateTime.UtcNow,
+            Role = dto.Role
         };
         dbContext.Add(myPlayer);
         dbContext.SaveChanges();
