# server/efscaffold/Entities/Player.cs
@@ -7,4 +7,13 @@ public partial class Player
     public string Name { get; set; } = null!;
 
     public string Email { get; set; } = null!;
+    
+    public string Passwordhash  { get; set; } = null!;
+
+    public string Salt { get; set; } = null!;
+    
+    public DateTime Createdat { get; set; }
+    
+    public string Role { get; set; } = null!;
+
 }
